[gd_scene load_steps=4 format=3 uid="uid://dcii0ykbxfvoi"]

[ext_resource type="Script" path="res://Scripts/UI/Level-Ui.gd" id="1_cg8t7"]
[ext_resource type="Texture2D" uid="uid://kharh11exlnr" path="res://Assets/LevelBorder.png" id="2_dk45a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6enxj"]

[node name="Select-level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cg8t7")

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = -28.0
offset_top = -55.0
offset_right = 34.0
offset_bottom = -32.0
theme_override_font_sizes/font_size = 15
text = "Level: "

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
offset_left = -26.0
offset_top = -27.0
offset_right = 26.0
offset_bottom = 27.0
color = Color(0.176471, 0.176471, 0.176471, 1)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("2_dk45a")
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_6enxj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6enxj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6enxj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6enxj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6enxj")

[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_button_focus_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
